appId: com.pocketshuttle.app
---
- launchApp:
    clearState: true
- tapOn:
    text: "Get Started"
    optional: true
- assertVisible: "Sign In"
- tapOn: "${ROLE_LABEL}"
- tapOn: "Email here"
- inputText: "${TEST_EMAIL}"
- tapOn: "Enter password"
- inputText: "${TEST_PASSWORD}"
- hideKeyboard
- tapOn: "Log In"
- assertVisible: "Hello,.*"
